# direct-edit

./: CMakeLists.txt  README.md  bitmap.h  buffer.c  buffer.h  credits.txt  main.c  meson.build  program.h
src/: bitmap.h  buffer.c  buffer.h  main.c  program.c  program.h
